--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000000"
+    android:background="#403C3C"
     android:padding="16dp"
     tools:context=".MainActivity">
 
@@ -25,7 +25,7 @@
             <ImageView
                 android:id="@+id/i1"
                 android:layout_width="130pt"
-                android:layout_height="match_parent"
+                android:layout_height="120pt"
                 android:src="@drawable/car" />
         </LinearLayout>
 
